# ad-sfl

./: add_centinel.py  demo_setup.ipynb  demo_setup.py  experiments_cifar100.ipynb  scaffold.py  test_models.py
ad-sfl-experiments/: .env.example  .gitignore  README.md  pyproject.toml
ad-sfl-experiments/configs/: base.yaml
ad-sfl-experiments/configs/attacks/: backdoor.yaml  label_flip.yaml
ad-sfl-experiments/configs/data/: mnist.yaml
ad-sfl-experiments/configs/defenses/: ad_sfl.yaml  none.yaml  safesplit.yaml
ad-sfl-experiments/configs/model/: lenet_split.yaml  resnet18_split.yaml
ad-sfl-experiments/configs/sfl/: reference_set.yaml  splitfed.yaml
ad-sfl-experiments/configs/sweeps/: mf_ratio.yaml  noniid_dirichlet.yaml
ad-sfl-experiments/scripts/: download_data.sh  run_cifar_iid.sh  run_cifar_noniid.sh  run_mnist_iid.sh  run_mnist_noniid.sh  sweep_mf_ratio.sh
ad-sfl-experiments/src/: __init__.py  main.py
ad-sfl-experiments/src/attacks/: __init__.py  backdoor.py  base.py  label_flip.py  schedules.py
ad-sfl-experiments/src/core/: __init__.py  checkpoints.py  device.py  logging.py  metrics.py  seed.py
ad-sfl-experiments/src/data/: __init__.py  datasets.py  partition.py  reference.py
ad-sfl-experiments/src/defenses/: __init__.py  base.py  none.py
ad-sfl-experiments/src/eval/: __init__.py  diagnostics.py  evaluate_asr.py  evaluate_clean.py
ad-sfl-experiments/src/experiments/: __init__.py  ablations.py  run_grid.py  run_single.py
ad-sfl-experiments/tests/: __init__.py  test_ddpg_step.py  test_kl_estimator.py  test_partition.py  test_split_shapes.py
(+34 files in other folders)
