[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ad-sfl-experiments"
version = "0.1.0"
description = "SplitFed + AD-SFL experiments"
authors = [{name = "Author"}]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
ad-sfl = "src.main:main"
